# blaze-builder

./: .gitignore  .gitmodules  .travis.yml  CHANGES  Makefile  README.markdown  Setup.hs  TODO  blaze-builder.cabal
Blaze/ByteString/: Builder.hs
Blaze/ByteString/Builder/: ByteString.hs  Char8.hs  HTTP.hs  Int.hs  Internal.hs  Word.hs  Write.hs
Blaze/ByteString/Builder/Char/: Latin1.hs  Utf8.hs
Blaze/ByteString/Builder/Compat/: Write.hs
Blaze/ByteString/Builder/Html/: Utf8.hs
Blaze/ByteString/Builder/Internal/: Buffer.hs  Types.hs  UncheckedShifts.hs  Write.hs
Criterion/: ScalingBenchmark.hs
Data/ByteString/: Builder.hs  Short.hs
Data/ByteString/Builder/: ASCII.hs  Extra.hs  Internal.hs  Prim.hs
Data/ByteString/Builder/Prim/: ASCII.hs  Binary.hs  Internal.hs
Data/ByteString/Builder/Prim/Internal/: Base16.hs  Floating.hs  UncheckedShifts.hs
Data/ByteString/Short/: Internal.hs
Foreign/: UPtr.hs
Text/Blaze/: Builder.hs  Put.hs
Text/Blaze/Builder/: ByteString.hs  Core.hs  Html.hs  Int.hs  Internal.hs  Utf8.hs  Word.hs  Write.hs
Text/Blaze/Builder/Char/: Utf8.hs
Text/Blaze/Builder/Core/: Internal.hs
Text/Blaze/Builder/Html/: Utf8.hs
benchmarks/: BenchThroughput.hs  BenchmarkServer.hs  BlazeVsBinary.hs  BoundedWrite.hs  Builder.hs  BuilderBufferRange.hs  ChunkedWrite.hs  Compression.hs  FastPut.hs  LazyByteString.hs  PlotTest.hs  StrictIO.hs  StringAndText.hs  UnboxedAppend.hs  Utf8IO.hs
benchmarks/Throughput/: BinaryBuilder.hs  BinaryBuilderDeclarative.hs  BinaryPut.hs  BlazeBuilder.hs  BlazeBuilderDeclarative.hs  BlazePut.hs  BlazePutMonad.hs  Memory.hs  Utils.hs
benchmarks/notes/: bench_string_and_text-ghc-6.12.3  bench_string_and_text-ghc-7.7.0.0.20100924
cbits/: fpstring.c  itoa.c
tests/: LlvmSegfault.hs  Tests.hs
