Name:                blaze-builder
Version:             0.3.1.1
Synopsis:            Efficient buffered output.

Description:
                     This library provides an abstraction of buffered output of
                     byte streams and several convenience functions to exploit
                     it. For example, it allows to efficiently serialize
                     Haskell values to lazy bytestrings with a large average
                     chunk size. The large average chunk size allows to make
                     good use of cache prefetching in later processing steps
                     (e.g. compression) and reduces the system call overhead
                     when writing the resulting lazy bytestring to a file or
                     sending it over the network.

Author:              Jasper Van der Jeugt, Simon Meier, Leon P Smith
Copyright:           (c) 2010-2013 Simon Meier
                     (c) 2010 Jasper Van der Jeugt
                     (c) 2013 Leon P Smith
Maintainer:          Simon Meier <iridcode@gmail.com>

License:             BSD3
License-file:        LICENSE

Homepage:            http://github.com/meiersi/blaze-builder
Bug-Reports:         http://github.com/meiersi/blaze-builder/issues
Stability:           Experimental

Category:            Data
Build-type:          Simple
Cabal-version:       >= 1.6

Extra-source-files:
                     Makefile
                     README.markdown
                     TODO
                     CHANGES

                     benchmarks/*.hs
                     benchmarks/Throughput/*.hs
                     benchmarks/Throughput/*.h
                     benchmarks/Throughput/*.c

                     tests/*.hs

Source-repository head
  Type: git
  Location: https://github.com/meiersi/blaze-builder.git

Library
  ghc-options:       -Wall

  exposed-modules:   Blaze.ByteString.Builder
                     Blaze.ByteString.Builder.Int
                     Blaze.ByteString.Builder.Word
                     Blaze.ByteString.Builder.ByteString
                     Blaze.ByteString.Builder.Char.Utf8
                     Blaze.ByteString.Builder.Char8
                     Blaze.ByteString.Builder.Html.Utf8
--                     Blaze.ByteString.Builder.HTTP
                     Blaze.ByteString.Builder.Compat.Write

                     Blaze.ByteString.Builder.Internal.Write

  build-depends:     base == 4.* ,
                     bytestring >= 0.9 && < 1.0 ,
                     deepseq,
                     text >= 0.10 && < 0.13

  if impl(ghc < 7.6)
      c-sources: bytestring/cbits/itoa.c


  if impl(ghc < 7.8)
      exposed-modules:
                         Data.ByteString.Builder
                         Data.ByteString.Builder.Extra
                         Data.ByteString.Builder.Prim

                         -- perhaps only exposed temporarily
                         Data.ByteString.Builder.Internal
                         Data.ByteString.Builder.Prim.Internal

                         Data.ByteString.Short
                         Data.ByteString.Short.Internal

      other-modules:
                         Data.ByteString.Builder.ASCII
                         Data.ByteString.Builder.Prim.Binary
                         Data.ByteString.Builder.Prim.ASCII
                         Data.ByteString.Builder.Prim.Internal.Floating
                         Data.ByteString.Builder.Prim.Internal.UncheckedShifts
                         Data.ByteString.Builder.Prim.Internal.Base16
